force-app/main/default/objects/Avaluador_por_Sucursal__mdt/Avaluador_por_Sucursal__mdt.object-meta.xml
<CustomObject>
    <label>Avaluador por Sucursal</label>
    <pluralLabel>Avaluadores por Sucursal</pluralLabel>
</CustomObject>