force-app/main/default/objects/Avaluador_por_Sucursal__mdt/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TOYOTA</fullName>
                <default>true</default>
                <label>TOYOTA</label>
            </value>
            <value>
                <fullName>SUZUKI</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
            </value>
            <value>
                <fullName>AUTOLOTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>