force-app/main/default/objects/Avaluador_por_Sucursal__mdt/fields/Nombre_del_avaluador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_avaluador__c</fullName>
    <label>Nombre del avaluador</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>