force-app/main/default/objects/Avaluador_por_Sucursal__mdt/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinandega</fullName>
                <default>true</default>
                <label>Chinandega</label>
            </value>
            <value>
                <fullName>Estelí</fullName>
            </value>
            <value>
                <fullName>Juigalpa</fullName>
            </value>
            <value>
                <fullName>Kia El Retiro</fullName>
            </value>
            <value>
                <fullName>León</fullName>
            </value>
            <value>
                <fullName>Matagalpa</fullName>
            </value>
            <value>
                <fullName>Plaza España</fullName>
            </value>
            <value>
                <fullName>Puerto Cabezas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>